tdf#131070 DOCX import: fix indentation of direct numbering

Indentation came from direct numbering has precedence over
table style.

Also paragraph style based right indentation affects DOCX list
items with not paragraph style based numbering, unlike Writer.

Keep all indentation values using direct paragraph formatting.

Change-Id: Ia66645269a4fcd06f0be4f02c775007c83d22a0b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/95954
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>